--- a/003.JS학습/JS3-1.제어문.html
+++ b/003.JS학습/JS3-1.제어문.html
@@ -31,6 +31,45 @@
         console.log('입력된 값:',score);
 
         // 4.입력된 값 필터링처리
+        // 4-1. 빈값 여부 - 공백제거 후 검사
+        // 스페이스바도 문자로 취급하므로 공백제거함수인 trim()을 사용합
+        if(score.trim()==""){
+            // 메시지 jexp에 넣기
+            jexp.innerHTML="값을 입력하세요.";
+            console.log('값을 입력하세요');
+            // 기존값 지우고 포커스 넣기
+            jumsu.value="";
+            jumsu.focus();
+
+            // if문에서 끝나고 아래쪽 함수 코드를 실행하지 않으려면 return을 쓴다
+            //  ->리턴을 만나는 순간 함수를 나간다.
+            // return 값 (값은 생략가능)
+            return;
+        }
+        // 4-2. 숫자 여부 - isNaN() 내장함수로 검사
+        // isNaN -> is Not a Number?
+        // 숫자가 아니니? 응 - true / 아니 - false 
+        else if(isNaN(score)){
+            // isNaN(변수명) -> 결과가 true면 숫자아님
+
+            jexp.innerHTML="숫자만 입력하세요";
+            jumsu.value="";
+            jumsu.focus();
+
+            console.log("숫자가 아니니?", isNaN(score));
+
+            return;
+
+        }
+        // 4-3. 범위 여부 - 조건문 검사
+        // 조건 : 0미만이거나 100초과
+        else if(score<0 || score>100){
+            jexp.innerHTML="0~100 사이에 숫자를 입력하세요";
+            jumsu.value="";
+            jumsu.focus();
+
+            return;
+        }
 
         // 5.출력메시지 만들기
         //90점 이상 : 매우잘함
@@ -79,14 +118,14 @@
 
     // if문 튜닝
     if(true){
-            console.log("조건통과");
+            // console.log("조건통과");
     }
 
     if(false){
-            console.log("불합격");
+            // console.log("불합격");
     }
     else{
-        console.log('불통과!!!');
+        // console.log('불통과!!!');
       }
 
     // 변수를 사용한 불린값체크
@@ -97,9 +136,9 @@
     // if문처리결과 찍기 함수
     var showResult =function(){
         if(codition){
-            console.log(codition,"통과");
+            // console.log(codition,"통과");
         }else{
-            console.log(codition,"는 false처리됨");
+            // console.log(codition,"는 false처리됨");
         }
     };/////////////showResult 함수
 
@@ -111,19 +150,19 @@
     // -> 0은 false, 이외의 모든 수는 true
     // true는 1, false는 0과 1:1매칭됨
     codition=1;
-    showResult();
+    // showResult();
     codition=0;
-    showResult();
+    // showResult();
     codition=-45613;
-    showResult();
+    // showResult();
     
     //테스트 3 : null -> 빈값을 의미하는 데이터
     codition=null;
-    showResult();
+    // showResult();
     
     //테스트 4 : 비교연산자 - 결과로 true/false가 나옴
     codition=34<1;
-    showResult();
+    // showResult();
 
     //테스트 5 : 선언된 적이 없는 변수 -> 에러가 결과로 나옴
     // codition=mymy;
