--- a/002.CSS학습/02.DisplayFlex/flex.html
+++ b/002.CSS학습/02.DisplayFlex/flex.html
@@ -149,6 +149,147 @@
         font: bold 14px/50px Verdana;
         color: #fff;
       }
+
+      /* 타이틀1 */
+      .t1 {
+        /* 플렉스 박스 : df */
+        display: flex;
+        justify-content: space-evenly;
+        /* 
+        [ justify-content 속성 ]
+
+        - 진행방향정렬속성 (justify 양쪽정렬의 뜻)
+        - content 는 진행방향으로 여러개의 
+        아이템요소가 있으니까 컨텐트임!
+
+        1) flex-start : 처음위치(기본값)
+        2) flex-end : 끝위치
+        3) center : 중앙
+        4) space-between : 
+            아이템요소 양쪽끝에 붙고 사이간격 일정
+        5) space-around : 
+            아이템요소 양쪽간격 일정
+        6) space-evenly : 
+            아이템요소 양쪽과 사이간격 일정
+        */
+
+        align-items: center;
+        /* 
+        [ align-items 속성 ]
+
+            - 진행방향의 수직 정렬 속성
+            - 수직방향의 아이템(요소)이 하나씩일때 사용
+
+            1) flex-start : 처음위치(기본값)
+            2) flex-end : 끝위치
+            3) center : 중앙
+            4) stretch : 수직방향 부모박스에 꽉채워 늘림!
+            (단, height값이 auto여야함!)
+            5) baseline : 각 요소에 글자가 있다면 
+            글자기준선(baseline)을 기준으로 정렬함!
+            (글자의 line-height를 변경해서 적용해봄!)
+        */
+      }
+
+      /* 타이틀2 */
+      .t2 {
+        top: 250px;
+        display: flex;
+        /* 진행방향정렬 : jcspb */
+        justify-content: space-between;
+        /* 진행방향수직정렬 : aib */
+        align-items: baseline;
+        /* 베이스라인은 글자 하단라인을 기준한다. */
+      }
+
+      /* 줄간격 조정 */
+      .t2 li:nth-child(2) {
+        line-height: 80px;
+      }
+      .t2 li:nth-child(4) {
+        line-height: 30px;
+      }
+
+      /* 타이틀 3 */
+      .t3 {
+        top: 400px;
+        display: flex;
+        /* 진행방향수직정렬 : aic */
+        align-items: center;
+      }
+
+      .t3 li:nth-child(4) {
+        margin-left: auto;
+        /* 선택요소의 떨어뜨리려는 방향으로 마진을 auto처리하면 flex박스 오른쪽 끝으로 이동시켜준다.  */
+      }
+
+      /* 타이틀 4 */
+      /* 오른쪽을 기준한 박스 */
+      .t4{
+        left: 10px;
+        transform: none;
+        width: 150px;
+        height: 500px;
+
+        display: flex;
+        /* 플랙스 진행방향 : fxdc */
+        flex-direction: column;
+        /* 
+        [ flex-direction 속성 ]
+        - 진행방향과 순서를 정함
+
+        1) row : 좌->우(기본값)
+        2) row-reverse : 우->좌
+        3) column : 위->아래
+        4) column-reverse : 아래->위
+        */
+
+        /* 진행방향수직정렬 */
+        align-items: center;
+        /* 진행방향정렬 : jcc */
+        justify-content: center;
+      }
+
+      /* 수직방향일때 3번째 li부터 끝으로 보내기 */
+      .t4 li:nth-child(3){
+        margin-top: auto;
+        /* 위쪽마진 auto면 끝으로 감 */
+      }
+
+
+      /* 타이틀 5 */
+      .t5{
+        top: 10px;
+        width: 150px;
+        height: 80px;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      /* 자식플렉스박스의 flex-shrink:1이 기본값임 -> 줄어들래? 응(1)
+      이것을 수정해야 강제로 줄어든 박스의 크기를 유지해야할 경우 변경해야한다. */
+      .t5 li{
+        flex-shrink: 0;
+        /* 
+        [flex-shrink 속성 ]
+        부모박스가 줄어들때 같이 자동으로 줄어들래?
+        설정의 기본값은 1이다! 즉 줄어든다!
+        0으로 변경하면 자기크기를 유지한다!
+        */
+      }
+
+      /* 타이틀 6 */
+      .t6{
+        top: 520px;
+        height: 250px;
+
+        display: flex;
+        /* 플랙스 랩핑박스
+        - 내용이 넘치면 줄바꿈함 */
+        flex-wrap: wrap;
+      }
+
     </style>
   </head>
   <body>
@@ -171,6 +312,63 @@
       <li>T</li>
       <li>T</li>
       <li>E</li>
+    </ol>
+
+    <!-- 타이틀박스 2 -->
+    <ol class="tit t2">
+      <li>W</li>
+      <li>O</li>
+      <li>R</li>
+      <li>L</li>
+      <li>D</li>
+    </ol>
+
+    <!-- 타이틀박스 3 -->
+    <ol class="tit t3">
+      <li>W</li>
+      <li>O</li>
+      <li>R</li>
+      <li>L</li>
+      <li>D</li>
+    </ol>
+
+    <!-- 타이틀박스 4 -->
+    <ol class="tit t4">
+      <li>W</li>
+      <li>O</li>
+      <li>R</li>
+      <li>L</li>
+      <li>D</li>
+    </ol>
+
+    <!-- 타이틀박스 5 -->
+    <ol class="tit t5">
+        <li>W</li>
+        <li>O</li>
+        <li>R</li>
+        <li>L</li>
+        <li>D</li>
+    </ol>
+
+    <!-- 타이틀박스 6 -->
+    <ol class="tit t6">                
+        <li>L</li>
+        <li>O</li>
+        <li>T</li>
+        <li>T</li>
+        <li>E</li>
+
+        <li>W</li>
+        <li>O</li>
+        <li>R</li>
+        <li>L</li>
+        <li>D</li>
+        
+        <li>L</li>
+        <li>O</li>
+        <li>T</li>
+        <li>T</li>
+        <li>E</li>
     </ol>
   </body>
 </html>
