--- a/002.CSS학습/02.DisplayFlex/flex.html
+++ b/002.CSS학습/02.DisplayFlex/flex.html
@@ -40,6 +40,23 @@
 
         --------------------------------------------------------------------------        
     
+        [ 자식요소 속성 중 order란? ]
+            - 원하는 순서로 정해서 박스가 나열되게함!
+            - flex-direction 속성으로 방향을 정할 수 있다!
+            (order를 지정하면 이 순서를 기반으로 방향을 정한다!)
+            
+
+            속성명-> order: 순번
+            순서를 정할 요소에 준다
+            예)
+                <li style="order:3"></li>
+                <li style="order:1"></li>
+                <li style="order:2"></li>
+                <li style="order:5"></li>
+
+
+            소스참고:
+            https://www.w3schools.com/css/tryit.asp?filename=trycss3_flexbox_order_2
 
         */
 
@@ -107,6 +124,24 @@
         3. 등분할 하려면 width값을 100%/나눌수
         4. 부모박스에 가상요소로 clear:both설정
       */
+
+      /* 배경등분할 박스 순서변경하기 : flex하위 order속성 */
+      .flex-box li:nth-child(1) {
+        order: 3;
+      }
+      .flex-box li:nth-child(2) {
+        order: 4;
+      }
+      .flex-box li:nth-child(3) {
+        order: 2;
+      }
+      .flex-box li:nth-child(4) {
+        order: 5;
+      }
+      .flex-box li:nth-child(5) {
+        order: 1;
+      }
+
 
       /* 등분할 박스 li 개별셋팅 */
       .flex-box li:nth-child(1) {
@@ -349,9 +384,6 @@
 
         /* 사이간격조정 */
         /* margin-top: 40px; */
-
-
-
       }
     </style>
   </head>
