--- a/003.JS학습/JS3-1.제어문.html
+++ b/003.JS학습/JS3-1.제어문.html
@@ -218,6 +218,86 @@
 
                 if(aa>10) my = "ㅎㅎㅎ";
     ***********************************/
+
+      // 함수명 :showLocal
+      // 기능 : 지역명을 입력하면 지역국번을 안내한다.
+    function showLocal(){
+      // 1.함수호출
+      // console.log("지역국번이 뭐야?");
+
+      // 2. 대상선정 : 변경대상
+      // 2-1. 입력요소 : input#local
+      var local=document.querySelector('#local');
+      // 2-2. 출력요소 : h3#info
+      var info=document.querySelector("#info");
+      // 일반적으로 선택요소의 속성을 이퀄 오른쪽에 쓰면 값을 읽어오고, 왼쪽에 쓰고 오른쪽에 값을 쓰면 값이 세팅된다.
+      
+
+      // console.log("대상선정 : ", local,info);
+
+
+      // 3. 입력값 읽어오기 -> inpu값은 value속성으로 읽어옴
+      var txt=local.value;
+
+      // console.log("입력값 : ",txt);
+
+      // 4. 빈값 필터링하기
+      if(txt.trim()==""){
+        alert("값을 입력하세요");
+        local.value="";
+        local.focus();
+
+        return;
+      }///if문///
+
+
+      // 5. 지역명을 switch case문으로 분류하여 메시지 넣기
+      // 메시지 변수
+      var message;
+
+      switch(txt){
+        case '서울': message="02"; break
+        case '경기': message="031"; break
+        case '인천': message="032"; break
+        case '부산': message="051"; break
+        default: message='esc';
+
+      }///switch
+      
+      console.log("스위치결과 : ",message);
+
+    }//////////showLocal함수
+
+    /********************************************** 
+            [ switch case문 ]
+            - 단일조건을 분류하여 실행문을 만들어 줄때 사용하는 제어문
+
+            ((구문구조))
+            ________________________________________
+
+            switch(변수){
+                case 경우1: 실행코드; break;
+                case 경우2: 실행코드; break;
+                case 경우3: 실행코드; break;
+                ...
+                default: 실행문;
+            }
+            ________________________________________
+
+            ((구문해석))
+
+            1. 변수값에 해당하는 경우 그 값에 해당하는
+            case에 들어가서 실행코드를 실행함
+
+            2. 각 case 끝에 break 예약어를 반드시 써야함!
+            -> 안쓰면 다른 case에 또 들어가는 경우가 생김!
+            -> 일반적으로 break 키워드는 제어문을 빠져나갈때 씀!
+
+            3. default 는 if문의 else문과 비슷하여 해당 케이스가 
+            없으면 이 부분이 실행됨(단, 필요시 사용)
+            -> default문에는 break를 쓰지 않는다!
+        **********************************************/
+
     </script>
 
     <!-- CSS코드구역 -->
@@ -338,5 +418,24 @@
       <div class="jshow"></div>
 
     </div>
+
+    <br /><br />
+    <hr />
+
+    <!-- switch case문 연습 -->
+    <h2 class="tit">switch case문 연습</h2>
+    <h3 id="info">국번안내</h3>
+    <label for="local">지역명 입력:</label>
+    <input
+        type="text"
+        id="local"
+        placeholder="지역명을 '도'를 빼고 쓰세요!"
+        maxlength="10"
+        onkeypress="if(event.keyCode==13)showLocal()"
+    />
+    <button class="sbtn" onclick="showLocal()">국번문의</button>
+
+    <br /><br />
+    <hr />
   </body>
 </html>
