로봇애니메이션
필터사용으로 외곽선 글로우, 하단 영역

--- a/001. HTML학습/03.Robot_PJ/Robot.html
+++ b/001. HTML학습/03.Robot_PJ/Robot.html
@@ -162,6 +162,7 @@
     <div id="bottom-area">
       <footer class="bottom-area">
         <!-- 3-1. 회사정보 -->
+        Robotronics Ins.
       </footer>
     </div>
   </body>
