--- a/002.CSS학습/05.3DAni/SolarSystem2D.html
+++ b/002.CSS학습/05.3DAni/SolarSystem2D.html
@@ -13,12 +13,15 @@
     </h1>
     <!-- 태양계박스 -->
     <div id="solar">
+
       <!-- 태양 -->
       <div id="sun">
         <img src="../images/sun.png" alt="태양" />
       </div>
+
       <!-- 지구+달 랩핑박스 -->
       <div class="earth-wrap planet">
+
           <!-- 달 -->
           <div id="moon" class="planet">
             <span class="ir">달</span>
@@ -30,6 +33,7 @@
                   </p>
               </div>
           </div>
+
           <!-- 지구 -->
           <div id="earth">
             <span class="ir">지구</span>
@@ -42,7 +46,9 @@
                 </p>
             </div>
         </div>
+
       </div>
+
       <!-- 목성 -->
       <div id="jupiter" class="planet">
         <span class="ir">목성</span>
@@ -90,7 +96,8 @@
             <p></p>
         </div>
         </div>
-      </div>
+
+
       <!-- 명왕성 -->
       <div id="pluto" class="planet">
         <span class="ir">명왕성</span>
@@ -112,6 +119,17 @@
         </div>
         </div>
       </div>
+
+    </div>
+    
+    <!-- 행성경로 -->
+    <div class="path-way">
+      <div class="earth"></div>
+      <div class="jupiter"></div>
+      <div class="saturn"></div>
+      <div class="pluto"></div>
+    </div>
+
     </div>
   </body>
 </html>
