--- a/002.CSS학습/05.3DAni/SolarSystem2D.html
+++ b/002.CSS학습/05.3DAni/SolarSystem2D.html
@@ -20,32 +20,33 @@
 
       <!-- 지구+달 랩핑박스 -->
       <div class="earth-wrap planet">
-
-          <!-- 달 -->
-          <div id="moon" class="planet">
-            <span class="ir">달</span>
-            <!-- 달 정보 -->
-              <div class="info">
-                  <h2>달(月, 영어: moon)</h2>
-                  <p>
-                      지구의 유일한 영구적 자연위성이고, 태양계의 위성 중 5번째로 크다. 행성의 크기와 비교하여, 자연위성 중 가장 크다. 지구 중심으로부터 달 중심까지의 거리는 평균 38만 4400 km로, 지구가 30개가 들어가는 거리이며, 지구에서 태양까지 거리의 1/389 보다 작다
-                  </p>
-              </div>
+        <!-- 달 -->
+        <div id="moon" class="planet">
+          <span class="ir">달</span>
+          <!-- 달 정보 -->
+          <div class="info">
+            <h2>달(月, 영어: moon)</h2>
+            <p>
+              지구의 유일한 영구적 자연위성이고, 태양계의 위성 중 5번째로 크다.
+              행성의 크기와 비교하여, 자연위성 중 가장 크다. 지구 중심으로부터
+              달 중심까지의 거리는 평균 38만 4400 km로, 지구가 30개가 들어가는
+              거리이며, 지구에서 태양까지 거리의 1/389 보다 작다
+            </p>
           </div>
-
-          <!-- 지구 -->
-          <div id="earth">
-            <span class="ir">지구</span>
-            <!-- 지구 정보 -->
-            <div class="info">
-                <h2>지구(地球, 영어: Earth)</h2>
-                <p>
-                    태양으로부터 세 번째 행성이며, 조금 두꺼운 대기층으로 둘러싸여 있고,
-                    지금까지 발견된 지구형 행성 가운데 가장 크다.
-                </p>
-            </div>
         </div>
 
+        <!-- 지구 -->
+        <div id="earth">
+          <span class="ir">지구</span>
+          <!-- 지구 정보 -->
+          <div class="info">
+            <h2>지구(地球, 영어: Earth)</h2>
+            <p>
+              태양으로부터 세 번째 행성이며, 조금 두꺼운 대기층으로 둘러싸여
+              있고, 지금까지 발견된 지구형 행성 가운데 가장 크다.
+            </p>
+          </div>
+        </div>
       </div>
 
       <!-- 목성 -->
@@ -62,15 +63,15 @@
 
         <!-- 정보 이펙트 -->
         <div class="ef1">
-            <p></p>
+          <p></p>
         </div>
         <div class="ef2">
-            <p></p>
+          <p></p>
         </div>
         <div class="ef3">
-            <p></p>
+          <p></p>
         </div>
-        </div>
+      </div>
 
       <!-- 토성 -->
       <div id="saturn" class="planet">
@@ -86,16 +87,15 @@
 
         <!-- 정보 이펙트 -->
         <div class="ef1">
-            <p></p>
+          <p></p>
         </div>
         <div class="ef2">
-            <p></p>
+          <p></p>
         </div>
         <div class="ef3">
-            <p></p>
+          <p></p>
         </div>
-        </div>
-
+      </div>
 
       <!-- 명왕성 -->
       <div id="pluto" class="planet">
@@ -111,25 +111,20 @@
 
         <!-- 정보 이펙트 -->
         <div class="ef4">
-            <p></p>
+          <p></p>
         </div>
         <div class="ef5">
-            <p></p>
+          <p></p>
         </div>
-        </div>
+      </div>
 
-                    
-    <!-- 행성경로 -->
-    <div class="path-way">
+      <!-- 행성경로 -->
+      <div class="path-way">
         <div class="earth"></div>
         <div class="jupiter"></div>
         <div class="saturn"></div>
         <div class="pluto"></div>
+      </div>
     </div>
-
-    </div>
-
-    </div>
-
   </body>
 </html>
