--- a/001. HTML학습/05.Nav_PJ/nav01.html
+++ b/001. HTML학습/05.Nav_PJ/nav01.html
@@ -24,7 +24,7 @@
             </div>
     
             <div class="col-8">
-              <nav class="gnb">
+              <nav class="gnb uline">
                 <ul>
                   <li>
                     <a href="#">Vision Processor</a>
