--- a/001. HTML학습/05.Nav_PJ/nav01.html
+++ b/001. HTML학습/05.Nav_PJ/nav01.html
@@ -124,8 +124,23 @@
                 </ul>
               </nav>
             </div>
-    
-            <div class="col-2"></div>
+
+            <!-- 다국어 메뉴 -->
+            <div class="col-2">
+                <nav class="multi-lang uline">
+                    <ul>
+                        <li>
+                            <a href="#">KOR</a>
+                        </li>
+                        <li>
+                            <a href="#">ENG</a>
+                        </li>
+                        <li>
+                            <a href="#">℡</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
 
         </div>
         <!-- (GNB) 네비게이션 박스 -->
