--- a/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/index.html
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/index.html
@@ -4,21 +4,57 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>쓸쓸하고 찬란하神 도깨비 드라마 소개</title>
-    <link rel="shortcut icon" href="./images/pavicon_tvN.png" />
+    <link rel="shortcut icon" href="./images/tvnlogo2.png" />
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
     <!-- 1. 상단영역 -->
     <div id="top-area">
       <header class="top-area inbox">
-        <h2 class="temp-tit">1. 상단영역</h2>
+        <!-- <h2 class="temp-tit">1. 상단영역</h2> -->
+        <!-- 1-1. 로고/gnb파트 -->
         <div class="cont-box">
+          <!-- 1-1-1.로고 -->
             <div class="col-2">
               <h1 class="mlogo">
-                <img src="./images/pavicon_tvN.png" alt="">
+                <img src="./images/tvnlogo2.png" alt="메인tvn로고">
               </h1>
             </div>
-            <div class="col-10"></div>
+            <!-- 1-1-2. gnb파트 -->
+            <div class="col-10">
+              <div class="gnb">
+                <ul>
+                  <li>
+                    <a href="#">About tvN</a>
+                  </li>
+                  <li>
+                    <a href="#">편성표</a>
+                  </li>
+                  <li>
+                    <a href="#">채널번호</a>
+                  </li>
+                  <li>
+                    <a href="#">드라마</a>
+                  </li>
+                  <li>
+                    <a href="#">연예오락</a>
+                  </li>
+                  <li>
+                    <a href="#">인사이트</a>
+                  </li>
+                  <li>
+                    <a href="#">동영상</a>
+                  </li>
+                  <li>
+                    <a href="#">이벤트</a>
+                  </li>
+                  <li>
+                    <a href="#">프로그램</a>
+                  </li>
+                </ul>
+              </div>
+
+            </div>
         </div>
       </header>
     </div>
