도깨비 상단메뉴

--- a/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/index.html
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/index.html
@@ -22,7 +22,23 @@
             </div>
             <!-- 1-1-2. gnb파트 -->
             <div class="col-10">
-              <div class="gnb">
+              <!-- 탑메뉴 -->
+              <nav class="top-menu">
+                <ul>
+                  <li>
+                    <a href="#">로그인</a>
+                  </li>
+                  <li>
+                    <a href="#">회원가입</a>
+                  </li>
+                  <li>
+                    <a href="#">검색</a>
+                  </li>
+                </ul>
+              </nav>
+
+              <!-- gnb메뉴 -->
+              <nav class="gnb">
                 <ul>
                   <li>
                     <a href="#">About tvN</a>
@@ -52,7 +68,7 @@
                     <a href="#">프로그램</a>
                   </li>
                 </ul>
-              </div>
+              </nav>
 
             </div>
         </div>
