--- a/003.JS학습/JS3-2.if문연습.html
+++ b/003.JS학습/JS3-2.if문연습.html
@@ -89,10 +89,10 @@
       <button class="btns">장면3</button>
     </div>
 
-    <script>
+    <!-- <script>
       var btns = document.querySelectorAll(".btns");
 
       console.log("버튼들", btns);
-    </script>
+    </script> -->
   </body>
 </html>
