--- a/001. HTML학습/05.Nav_PJ/nav03.html
+++ b/001. HTML학습/05.Nav_PJ/nav03.html
@@ -19,6 +19,7 @@
               <h1 class="logo">
                 <a href="#">
                   <img src="./images/nav03/logo_w.png" alt="흰색 로고" />
+                  <img src="./images/nav03/logo_b.png" alt="검은색 로고" />
                 </a>
               </h1>
           </div>
@@ -30,7 +31,11 @@
               <dl>
                 <!-- 상위메뉴 :dt -->
                 <dt>
-                  <a href="#">STORY</a>
+                  <a href="#">
+                    <img src="./images/nav03/story_i_w.png" alt="하얀 스토리 메뉴">
+                    <img src="./images/nav03/story_i.png" alt="검은 스토리 메뉴">
+                    <img src="./images/nav03/story_i_on.png" alt="빨간 스토리 메뉴">
+                  </a>
                 </dt>
                 <!-- 하위메뉴 :dd -->
                 <dd>
