도깨비 서브메뉴

--- a/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/index.html
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/index.html
@@ -15,62 +15,83 @@
         <!-- 1-1. 로고/gnb파트 -->
         <div class="cont-box">
           <!-- 1-1-1.로고 -->
-            <div class="col-2">
-              <h1 class="mlogo">
-                <img src="./images/tvnlogo2.png" alt="메인tvn로고">
-              </h1>
-            </div>
-            <!-- 1-1-2. gnb파트 -->
-            <div class="col-10">
-              <!-- 탑메뉴 -->
-              <nav class="top-menu">
-                <ul>
-                  <li>
-                    <a href="#">로그인</a>
-                  </li>
-                  <li>
-                    <a href="#">회원가입</a>
-                  </li>
-                  <li>
-                    <a href="#">검색</a>
-                  </li>
-                </ul>
-              </nav>
+          <div class="col-2">
+            <h1 class="mlogo">
+              <img src="./images/tvnlogo2.png" alt="메인tvn로고" />
+            </h1>
+          </div>
+          <!-- 1-1-2. gnb파트 -->
+          <div class="col-10">
+            <!-- 탑메뉴 -->
+            <nav class="top-menu">
+              <ul>
+                <li>
+                  <a href="#">로그인</a>
+                </li>
+                <li>
+                  <a href="#">회원가입</a>
+                </li>
+                <li>
+                  <a href="#">검색</a>
+                </li>
+              </ul>
+            </nav>
 
-              <!-- gnb메뉴 -->
-              <nav class="gnb">
-                <ul>
-                  <li>
-                    <a href="#">About tvN</a>
-                  </li>
-                  <li>
-                    <a href="#">편성표</a>
-                  </li>
-                  <li>
-                    <a href="#">채널번호</a>
-                  </li>
-                  <li>
-                    <a href="#">드라마</a>
-                  </li>
-                  <li>
-                    <a href="#">연예오락</a>
-                  </li>
-                  <li>
-                    <a href="#">인사이트</a>
-                  </li>
-                  <li>
-                    <a href="#">동영상</a>
-                  </li>
-                  <li>
-                    <a href="#">이벤트</a>
-                  </li>
-                  <li>
-                    <a href="#">프로그램</a>
-                  </li>
-                </ul>
-              </nav>
-
-            </div>
+            <!-- gnb메뉴 -->
+            <nav class="gnb">
+              <ul>
+                <li>
+                  <a href="#">About tvN</a>
+                </li>
+                <li>
+                  <a href="#">편성표</a>
+                </li>
+                <li>
+                  <a href="#">채널번호</a>
+                </li>
+                <li>
+                  <a href="#">드라마</a>
+                  <div class="smenu">
+                    <div class="swrap">
+                      <h2>드라마</h2>
+                      <ol>
+                        <li>
+                          <a href="#">[예정] 선재 업고 튀어</a>
+                        </li>
+                        <li>
+                          <a href="#">[종영] 내 남편과 결혼해줘</a>
+                        </li>
+                        <li>
+                          <a href="#">[월/화] 웨딩 임파서블</a>
+                        </li>
+                        <li>
+                          <a href="#">[토/일] 눈물의 여왕</a>
+                        </li>
+                        <li>
+                          <a href="#">[종영] 세작, 매혹된 자들</a>
+                        </li>
+                      </ol>
+                    </div>
+                  </div>
+                </li>
+                <li>
+                  <a href="#">연예오락</a>
+                </li>
+                <li>
+                  <a href="#">인사이트</a>
+                </li>
+                <li>
+                  <a href="#">동영상</a>
+                </li>
+                <li>
+                  <a href="#">이벤트</a>
+                </li>
+                <li>
+                  <a href="#">프로그램</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
         </div>
       </header>
     </div>
@@ -79,7 +100,7 @@
       <section class="ban-area inbox">
         <h2 class="temp-tit">2. 배너영역</h2>
         <div class="cont-box">
-            <div class="col-12"></div>
+          <div class="col-12"></div>
         </div>
       </section>
     </div>
@@ -88,7 +109,7 @@
       <nav class="spart-menu inbox">
         <h2 class="temp-tit">서브파트메뉴</h2>
         <div class="cont-box">
-            <div class="col-12"></div>
+          <div class="col-12"></div>
         </div>
       </nav>
     </div>
@@ -97,8 +118,8 @@
       <section class="intro-area inbox">
         <h2 class="temp-tit">3. 인트로영역</h2>
         <div class="cont-box">
-            <div class="col-6"></div>
-            <div class="col-6"></div>
+          <div class="col-6"></div>
+          <div class="col-6"></div>
         </div>
       </section>
     </div>
@@ -107,7 +128,7 @@
       <section class="preview-area inbox">
         <h2 class="temp-tit">4. 미리보기영역</h2>
         <div class="cont-box">
-            <div class="col-12"></div>
+          <div class="col-12"></div>
         </div>
       </section>
     </div>
@@ -116,7 +137,7 @@
       <section class="real-photo-area inbox">
         <h2 class="temp-tit">5. 현장포토영역</h2>
         <div class="cont-box">
-            <div class="col-12"></div>
+          <div class="col-12"></div>
         </div>
       </section>
     </div>
@@ -125,7 +146,7 @@
       <section class="main-photo-area inbox">
         <h2 class="temp-tit">6. 대표이미지 영역</h2>
         <div class="cont-box">
-            <div class="col-12"></div>
+          <div class="col-12"></div>
         </div>
       </section>
     </div>
@@ -134,7 +155,7 @@
       <section class="clip-video-area inbox">
         <h2 class="temp-tit">7. 최신동영상영역</h2>
         <div class="cont-box">
-            <div class="col-12"></div>
+          <div class="col-12"></div>
         </div>
       </section>
     </div>
@@ -143,9 +164,9 @@
       <footer class="footer-area inbox">
         <h2 class="temp-tit">8. 하단영역</h2>
         <div class="cont-box">
-            <div class="col-8"></div>
-            <div class="col-4"></div>
-            <div class="col-12"></div>
+          <div class="col-8"></div>
+          <div class="col-4"></div>
+          <div class="col-12"></div>
         </div>
       </footer>
     </div>
