--- a/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/index.html
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/index.html
@@ -76,9 +76,59 @@
                 </li>
                 <li>
                   <a href="#">연예오락</a>
+                  <div class="smenu">
+                    <div class="swrap">
+                      <h2>연예오락</h2>
+                      <ol>
+                        <li>
+                          <a href="#">[월] 줄 서는 식당2</a>
+                        </li>
+                        <li>
+                          <a href="#">[금] 아파트404</a>
+                        </li>
+                        <li>
+                          <a href="#">[일] 텐트 밖은 유럽 남프랑스 편</a>
+                        </li>
+                        <li>
+                          <a href="#">[화] 벌거벗은 세계사</a>
+                        </li>
+                        <li>
+                          <a href="#">[금] 프리한 닥터</a>
+                        </li>
+                        <li>
+                          <a href="#">[종영] 나나투어 with 세븐틴</a>
+                        </li>
+                        <li>
+                          <a href="#">[수] 유 퀴즈 온 더 블럭</a>
+                        </li>
+                        <li>
+                          <a href="#">[토] 웰컴투불로촌</a>
+                        </li>
+                        <li>
+                          <a href="#">[목] 70억의 선택</a>
+                        </li>
+                        <li>
+                          <a href="#">[토] 놀라운 토요일</a>
+                        </li>
+                      </ol>
+                    </div>
+                  </div>
                 </li>
                 <li>
                   <a href="#">인사이트</a>
+                  <div class="smenu">
+                    <div class="swrap">
+                      <h2>인사이트</h2>
+                      <ol>
+                        <li>
+                          <a href="#">[목] 김창옥쇼2</a>
+                        </li>
+                        <li>
+                          <a href="#">[종영] 희망의 빛, 블루라이팅</a>
+                        </li>
+                      </ol>
+                    </div>
+                  </div>
                 </li>
                 <li>
                   <a href="#">동영상</a>
@@ -98,7 +148,7 @@
     <!-- 2. 배너영역 -->
     <div id="ban-area">
       <section class="ban-area inbox">
-        <h2 class="temp-tit">2. 배너영역</h2>
+        <!-- <h2 class="temp-tit">2. 배너영역</h2> -->
         <div class="cont-box">
           <div class="col-12"></div>
         </div>
