--- a/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/index.html
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/index.html
@@ -147,10 +147,24 @@
     </div>
     <!-- 2. 배너영역 -->
     <div id="ban-area">
-      <section class="ban-area inbox">
-        <!-- <h2 class="temp-tit">2. 배너영역</h2> -->
+      <!-- 배너는 중앙속박스 적용 안함 -->
+      <section class="ban-area">
+        <h2 class="temp-tit">2. 배너영역</h2>
         <div class="cont-box">
-          <div class="col-12"></div>
+          <div class="col-12">
+            <!-- 슬라이드박스 -->
+            <div class="slide-box">
+              <ul class="slider">
+                <li class="sum-01"></li>
+                <li class="sum-02"></li>
+                <li class="sum-03"></li>
+              </ul>
+            </div>
+            <!-- 캐릭터박스 -->
+            <div class="cat-box">
+
+            </div>
+          </div>
         </div>
       </section>
     </div>
