--- a/002.CSS학습/05.3DAni/solar_system2D.html
+++ b/002.CSS학습/05.3DAni/solar_system2D.html
@@ -42,8 +42,8 @@
           <div class="info">
             <h2>지구(地球, 영어: Earth)</h2>
             <p>
-              태양으로부터 세 번째 행성이며, 조금 두꺼운 대기층으로 둘러싸여
-              있고, 지금까지 발견된 지구형 행성 가운데 가장 크다.
+              태양으로부터 세 번째 행성이며, 조l금 두꺼운 대기층으로 둘러싸여
+              있고, 지금까지 발견된 지구형 행성 가l운데 가장 크다.
             </p>
           </div>
         </div>
