--- a/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/index.html
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/index.html
@@ -162,7 +162,37 @@
             </div>
             <!-- 캐릭터박스 -->
             <div class="cat-box">
+              <div class="cat-inbox">
+                <!-- 개별캐릭터박스 -->
+                <article>
+                  <!-- 이미지박스 -->
+                  <div class="imbx"></div>
+                  <!-- 설명박스 -->
+                  <div class="descbx"></div>
+                </article>
+                
+                <article>
+                  <!-- 이미지박스 -->
+                  <div class="imbx"></div>
+                  <!-- 설명박스 -->
+                  <div class="descbx"></div>
+                </article>
 
+                <article>
+                  <!-- 이미지박스 -->
+                  <div class="imbx"></div>
+                  <!-- 설명박스 -->
+                  <div class="descbx"></div>
+                </article>
+
+                <article>
+                  <!-- 이미지박스 -->
+                  <div class="imbx"></div>
+                  <!-- 설명박스 -->
+                  <div class="descbx"></div>
+                </article>
+                
+              </div>
             </div>
           </div>
         </div>
