--- a/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/index.html
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/index.html
@@ -168,6 +168,10 @@
                   <!-- 이미지박스 -->
                   <div class="imbx">
                     <img src="./images/dc1.png" alt="공유">
+                    <span class="iname">
+                      <img src="./images/d011.png" alt="흐린이름">
+                      <img src="./images/d01.png " alt="진한이름">
+                    </span>
                   </div>
                   <!-- 설명박스 -->
                   <div class="descbx"></div>
@@ -178,6 +182,10 @@
                   <!-- 이미지박스 -->
                   <div class="imbx">
                     <img src="./images/dc2.png" alt="김고은">
+                    <span class="iname">
+                      <img src="./images/d022.png" alt="흐린이름">
+                      <img src="./images/d02.png " alt="진한이름">
+                    </span>
                   </div>
                   <!-- 설명박스 -->
                   <div class="descbx"></div>
@@ -188,6 +196,10 @@
                   <!-- 이미지박스 -->
                   <div class="imbx">
                     <img src="./images/dc3.png" alt="이동욱">
+                    <span class="iname">
+                      <img src="./images/d033.png" alt="흐린이름">
+                      <img src="./images/d03.png " alt="진한이름">
+                    </span>
                   </div>
                   <!-- 설명박스 -->
                   <div class="descbx"></div>
@@ -198,6 +210,10 @@
                   <!-- 이미지박스 -->
                   <div class="imbx">
                     <img src="./images/dc4.png" alt="유인나">
+                    <span class="iname">
+                      <img src="./images/d044.png" alt="흐린이름">
+                      <img src="./images/d04.png " alt="진한이름">
+                    </span>
                   </div>
                   <!-- 설명박스 -->
                   <div class="descbx"></div>
