--- a/003.JS학습/JS4-1.배열과객체.html
+++ b/003.JS학습/JS4-1.배열과객체.html
@@ -490,9 +490,6 @@
           target[5].onclick = JYObj.trailer;
         }; /////showMovieInfo함수
 
-        // 내것에 넣을려고 만듦
-        let myObj = JYObj;
-
         // 출력박스 cSS조정하기
         target[5].style.lineHeight = "34px";
         target[5].style.cursor = "pointer";
@@ -625,8 +622,17 @@
             }
             console.log("영화정보 변경 후 : ", JYObj);
             showMovieInfo();
-
             // 변경데이터 확인 후 바로 위 박스 영화정보 업데이트
+            // add() / remove() 메서드 사용
+            // 버튼에 클래스 on 모두 빼기
+            for(let i =0;i<cntBtn;i++){
+              choiceBtn[i].classList.remove("on");
+            }//for문
+
+            // 클릭된 버튼에 클래스 on넣기
+            // 클릭된 버튼은 this
+            this.classList.add("on");
+            
           }; //클릭이벤트 함수
         } ////////for문
       } /////////////////////loadFn함수////////////////////////
