--- a/003.JS학습/JS5-1.함수.html
+++ b/003.JS학습/JS5-1.함수.html
@@ -468,6 +468,8 @@
             bgList[listSeq].classList.remove('on');
 
             listSeq++;
+            // 한계값 체크
+            if(listSeq == 10) listSeq = 0;
             // 리스트 다음순번 클래스 넣기
             bgList[listSeq].classList.add('on');
 
