--- a/003.JS학습/JS8-1.DOM_이벤트객체.html
+++ b/003.JS학습/JS8-1.DOM_이벤트객체.html
@@ -49,13 +49,43 @@
       function loadFn() {
         console.log("로딩완료");
 
+        // 타겟 이벤트로그 찍기 함수
+        const showLog = 
+        x => console.log(x,":",
+            "\n cTg:",event.currentTarget,
+            "\n tg:",event.target,
+            "\n cancelable:",event.cancelable,
+            "\n bubbles:",event.bubbles,
+            "\n type:",event.type,
+            "\n view:",event.view,
+            "\n eventPhase:",event.eventPhase,
+            "\n isTrusted:",event.isTrusted,
+            );
+
         // [ 공통요구사항 ] //
         // 각 포함요소들에 클릭이벤트 발생 시 배경색 변경하기 기능 구현
         // 대상 : body,div,p,a
         // 1. 아들방
-        qs('a').onclick = ()=>{
-            event.currentTarget.style.backgroundColor = 'red';
+        qs('a').onclick = (e)=>{
+            // 이벤트 버블링 막기
+            // event.stopPropagation();
+            e.stopPropagation();
+            // event.currentTarget.style.backgroundColor = 'red';
+            e.currentTarget.style.backgroundColor = 'red';
+
+            // 이벤트 로그찍기
+            showLog("아들방");
         };
+
+        /* 
+        event 객체를 사용한 경우와 
+        event 함수 내부에 전달되는 이벤트 전달 변수를 사용한 경우의 차이
+        =>> event 객체는 현재 발생한 이벤트 리스트 전체를 탐색하여 이벤트를 체크하는 것이고
+            전달변수를 사용하면 현재 이벤트가 발생한 요소에 대한 특정이벤트만 바로 처리하게 된다.
+
+        > 이벤트 전달변수를 사용한 처리법이 이벤트 처리 효율성을 높여준다.(일반적으로 많이씀)
+
+        */ 
         // 2. 엄마집
         qs('p').onclick = ()=>{
             event.currentTarget.style.backgroundColor = 'yellow';
@@ -109,7 +139,7 @@
         3. 요소 속성
         ★(1) currentTarget (element) : 
             현재 이벤트를 처리중인 element
-        ★(2) target (element) : 이벤트 타깃
+        ★(2) target (element) : 이벤트 타깃 (이벤트의 시작..?)
 
         4. 이벤트 메서드
         ★(1) preventDefault() (Function) 
@@ -164,6 +194,8 @@
         -> 주의: 함수를 외부함수로 만들어야 해제가 가능하다!
         (2) 이벤트속성 = ""; -> 빈 문자열값을 할당하여 지움
         **************************************************/
+
+
     </script>
   </head>
 
