--- a/003.JS학습/JS8-1.DOM_이벤트객체.html
+++ b/003.JS학습/JS8-1.DOM_이벤트객체.html
@@ -65,17 +65,33 @@
         // [ 공통요구사항 ] //
         // 각 포함요소들에 클릭이벤트 발생 시 배경색 변경하기 기능 구현
         // 대상 : body,div,p,a
+
         // 1. 아들방
+
+        // 클릭 이벤트 속성에 함수를 할당하여 이벤트 처리함
         qs('a').onclick = (e)=>{
             // 이벤트 버블링 막기
             // event.stopPropagation();
-            e.stopPropagation();
+            // e.stopPropagation();
             // event.currentTarget.style.backgroundColor = 'red';
             e.currentTarget.style.backgroundColor = 'red';
 
             // 이벤트 로그찍기
             showLog("아들방");
-        };
+        };//클릭이벤트
+        
+        //  ->> 추가 이벤트 기능을 구현한 함수 만들기
+        const sonFn=e=>{
+            // 아웃라인 넣기
+            e.currentTarget.style.outline = 
+            '20px dotted hotpink';
+        }
+
+        // 아들방에 추가 이벤트 설정하기
+        addEvt(qs('a'),'click',sonFn);
+        // 할당형 함수를 연결할 경우 위에서 만들고 아래서 할당해야 연결 가능
+        // -> 위에 이벤트를 그대로 쓸 경우 아래와같음
+        // document.querySelector('a').addEventListener('click',sonFn);
 
         /* 
         event 객체를 사용한 경우와 
@@ -89,14 +105,22 @@
         // 2. 엄마집
         qs('p').onclick = ()=>{
             event.currentTarget.style.backgroundColor = 'yellow';
+            showLog("엄마집");
         };
         // 3. 친척네집
         qs('div').onclick = ()=>{
+            let original = event.target;
+
             event.currentTarget.style.backgroundColor = 'green';
+
+            // 친척네집에서 target의 글자색 변경하기
+            original.style.fontSize="80px";
+            showLog("친적네집");
         };
         // 4. 대한민국전체
         qs('body').onclick = ()=>{
             event.currentTarget.style.backgroundColor = 'blue';
+            showLog("대한민국 전체");
         };
 
 
@@ -139,7 +163,7 @@
         3. 요소 속성
         ★(1) currentTarget (element) : 
             현재 이벤트를 처리중인 element
-        ★(2) target (element) : 이벤트 타깃 (이벤트의 시작..?)
+        ★(2) target (element) : 이벤트 타깃 (클릭?한 이벤트 / 이벤트가 시작되는 곳)
 
         4. 이벤트 메서드
         ★(1) preventDefault() (Function) 
