--- a/003.JS학습/JS3-6.2.forEach메서드.html
+++ b/003.JS학습/JS3-6.2.forEach메서드.html
@@ -199,22 +199,19 @@
 
             console.log("선택데이터 : ", mvInfo, Array.isArray(mvInfo));
 
-
             // 3. 출력박스에 정보 배분하기
             // 선택정보 : mvInfo 배열
             // 출력박스요소 : .minfo -> minfo변수
-            mvInfo.forEach((val,idx)=>{
-                // val - 배열값
-                // idx - 배열 순번(0,1,2)
-                // 배열값의 순번과 동일한 순번의 요소에 출력함
-                // console.log("val가 뭐지 ",val);
+            mvInfo.forEach((val, idx) => {
+              // val - 배열값
+              // idx - 배열 순번(0,1,2)
+              // 배열값의 순번과 동일한 순번의 요소에 출력함
+              // console.log("val가 뭐지 ",val);
 
-                minfo[idx].innerText=val; /* ★★★★★★★★★★★★★★★★★★ */
-                
-                // console.log("뭐가 들어있지 ",minfo[idx].innerText);
-            });
+              minfo[idx].innerText = val; /* ★★★★★★★★★★★★★★★★★★ */
 
-
+              // console.log("뭐가 들어있지 ",minfo[idx].innerText);
+            }); ///forEach메서드///
           }; //click이벤트
         }); ///forEach메서드///
 
@@ -224,6 +221,52 @@
         //     console.log("2번값 : ",힐);
         //     console.log("3번값 : ",헬);
         // });
+
+        /////////////////////////////////////////////////////////
+        /****************************************
+         * 추가기능 : .wrap 박스에 마우스 move사 포스터박스 포인터 따라다니기
+         ****************************************/
+        // 1. 대상선정
+        // 1-1. 이벤트 대상 : .wrap
+        const wrap = document.querySelector(".wrap");
+        // 1-2. 변경 대상 : .flying-poster
+        const moving = document.querySelector(".flying-poster");
+
+        console.log(wrap, moving);
+
+        // 2. 이벤트설정 + 기능구현
+        // mousemove 이벤트 : 요소위에 마우스 움직일때 계속 발생
+        // e는 이벤트 전달변수
+        wrap.onmousemove = (e) => {
+          // 이벤트 객체로부터 x,y 포인터 위치값
+          // event.pageX -> x축좌표
+          // event.pageY -> y축좌표
+          // 위치값 기준은 document 문서전체이며 x축은 왼쪽끝 / y축은 상단끝이 기준
+          // 숫자는 단위표시없는 px값
+          // console.log('x:',e.pageX,'\ny:',e.pageY);
+
+          // 변경대상의 top,left값을 변경한다.
+          moving.style.top = e.pageY + "px";
+          moving.style.left = e.pageX + "px";
+        }; //mousemove이벤트
+
+        // .wrap에 마우스 엔터시 포스터 보이기
+        wrap.onmouseenter = () => {
+          console.log(
+            "삼항연산결과",
+            minfo[0].innerText == "" ? "기본" : minfo[0].innerText
+          );
+          // 포스터 박스 배경이미지 초기세팅하기
+          // 영화제목박스가 비어있으면 "기본" 포스터 / 아니면 영화제목과 같은 포스터 출력
+          moving.style.backgroundImage = `url(${
+            img_src[minfo[0].innerText == "" ? "기본" : minfo[0].innerText]
+          })`;
+          moving.style.display = "block";
+        };
+        // .wrap에 마우스 리브시 포스터 보이기
+        wrap.onmouseleave = () => {
+          moving.style.display = "none";
+        };
       } //////////// loadFn 함수 ///////////
       //////////////////////////////////////
     </script>
