--- a/001. HTML학습/06.CGV_PJ/003.구현소스/index.html
+++ b/001. HTML학습/06.CGV_PJ/003.구현소스/index.html
@@ -44,31 +44,83 @@
       <nav class="poster-menu">
         <ul>
           <li>
-            <a href="#" onclick="멍멍이('aa0WjdSYdCk')">
-              <img src="./images/m1.jpg" alt="스파이더맨-어크로스더유니버스"
-            /></a>
-          </li>
-          <li>
-            <a href="#" onclick="멍멍이('-AZ7cnwn2YI')">
-                <img src="./images/m2.jpg" alt="서울의 봄" /></a>
-          </li>
-          <li>
-            <a href="#" onclick="멍멍이('IQZwykwNQYo')">
-              <img src="./images/m3.jpg" alt="짱구는 못말려 초능력 대결전"
-            /></a>
-          </li>
-          <li>
-            <a href="#" onclick="멍멍이('Bldf9SWRPFM')"> 
-              <img src="./images/m4.jpg" alt="웡카" />
+            <a href="#">
+              <img src="./images/m1.jpg" alt="스파이더맨-어크로스더유니버스" />
+
+              <!-- 영화정보박스 -->
+              <div class="mv-info">
+                <ol>
+                  <li>스파이더맨-어크로스더유니버스</li>
+                  <li>셔메이크 무어</li>
+                  <li>애니메이션</li>
+                </ol>
+              </div>
             </a>
           </li>
           <li>
-            <a href="#" onclick="멍멍이('quyIxaEvuVg')"> 
-              <img src="./images/m5.jpg" alt="스미코구라시" /></a>
+            <a href="#">
+              <img src="./images/m2.jpg" alt="서울의 봄" />
+              <!-- 영화정보박스 -->
+              <div class="mv-info">
+                <ol>
+                  <li>서울의 봄</li>
+                  <li>황정민,정우성</li>
+                  <li>드라마</li>
+                </ol>
+              </div>
+            </a>
           </li>
           <li>
-            <a href="#" onclick="멍멍이('VMBCqyg2qZ8')"> 
-              <img src="./images/m6.jpg" alt="추락의 해부" /></a>
+            <a href="#">
+              <img src="./images/m3.jpg" alt="짱구는 못말려 초능력 대결전" />
+              <!-- 영화정보박스 -->
+              <div class="mv-info">
+                <ol>
+                  <li>짱구는 못말려 초능력 대결전</li>
+                  <li>요시다 유우키</li>
+                  <li>코미디</li>
+                </ol>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="./images/m4.jpg" alt="웡카" />
+              <!-- 영화정보박스 -->
+              <div class="mv-info">
+                <ol>
+                  <li>웡카</li>
+                  <li>티모시 샬라메</li>
+                  <li>판타지</li>
+                </ol>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="./images/m5.jpg" alt="스미코구라시" />
+              <!-- 영화정보박스 -->
+              <div class="mv-info">
+                <ol>
+                  <li>스미코구라시</li>
+                  <li>스미코,미닛코</li>
+                  <li>애니메이션</li>
+                </ol>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="./images/m6.jpg" alt="추락의 해부" />
+              <!-- 영화정보박스 -->
+              <div class="mv-info">
+                <ol>
+                  <li>추락의 해부</li>
+                  <li>범죄,스릴러</li>
+                  <li>산드라 휠러</li>
+                </ol>
+              </div>
+            </a>
           </li>
         </ul>
       </nav>
