--- a/001. HTML학습/06.CGV_PJ/003.구현소스/index.html
+++ b/001. HTML학습/06.CGV_PJ/003.구현소스/index.html
@@ -45,12 +45,12 @@
         <ul>
           <li>
             <a href="#">
-              <img src="./images/m1.jpg" alt="스파이더맨-어크로스더유니버스" />
+              <img src="./images/m1.jpg" alt="스파이더맨" />
 
               <!-- 영화정보박스 -->
               <div class="mv-info">
                 <ol>
-                  <li>스파이더맨-어크로스더유니버스</li>
+                  <li>스파이더맨</li>
                   <li>셔메이크 무어</li>
                   <li>애니메이션</li>
                 </ol>
@@ -72,11 +72,11 @@
           </li>
           <li>
             <a href="#">
-              <img src="./images/m3.jpg" alt="짱구는 못말려 초능력 대결전" />
+              <img src="./images/m3.jpg" alt="짱구는 못말려" />
               <!-- 영화정보박스 -->
               <div class="mv-info">
                 <ol>
-                  <li>짱구는 못말려 초능력 대결전</li>
+                  <li>짱구는 못말려</li>
                   <li>요시다 유우키</li>
                   <li>코미디</li>
                 </ol>
@@ -116,8 +116,8 @@
               <div class="mv-info">
                 <ol>
                   <li>추락의 해부</li>
-                  <li>범죄,스릴러</li>
                   <li>산드라 휠러</li>
+                  <li>범죄,스릴러</li>
                 </ol>
               </div>
             </a>
