--- a/999.코드실험실/02.클립애니메이션.html
+++ b/999.코드실험실/02.클립애니메이션.html
@@ -48,7 +48,46 @@
 
       /* 페이지별 배경이미지 */
       .pg1 {
+      /* 원형 클립패스 */
+      /* clip-path: circle(반지름 at x축위치 y축위치);
+      퍼센트 기준 :
+        - 반지름은 장축기준
+        - x축위치는 가로길이기준
+        - y축위치는 세로길이기준 */
+      clip-path: circle(10% at 10% 10%);
         background-image: url(https://images.unsplash.com/photo-1503614472-8c93d56e92ce?q=80&w=2911&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+      }
+      /* 애니메이션 호출은 클래스 on을 줄 때 작동 */
+      .pg1.on{
+        /* 10초간 1초후 마지막상태 유지 */
+        animation: circle-ani 10s ease-in-out 1s forwards;
+      }
+      @keyframes circle-ani {
+        /* 왼쪽위 */
+        0%{
+            clip-path: circle(10% at 10% 10%);
+        }
+        /* 오른쪽위 */
+        20%{
+            clip-path: circle(10% at 90% 10%);
+        }
+        /* 오른쪽아래 */
+        40%{
+            clip-path: circle(10% at 90% 80%);
+        }
+        /* 왼쪽아래 */
+        60%{
+            clip-path: circle(10% at 10% 80%);
+        }
+        /* 중앙 */
+        80%{
+            clip-path: circle(10% at 50% 50%);
+        }
+        /* 중앙에서 확대 */
+        100%{
+            clip-path: circle(100% at 50% 50%);
+        }
+
       }
       .pg2 {
         background-image: url(https://images.unsplash.com/photo-1503424886307-b090341d25d1?q=80&w=2952&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
@@ -65,6 +104,13 @@
     </style>
     <script>
       // 자바스크립트 구역
+      window.addEventListener('load',()=>{
+        document.querySelectorAll('.pg').forEach(ele=>{
+            ele.onclick=()=>{
+                ele.classList.toggle('on');
+            };//onclick메서드
+        });///for each문///
+      });//load 구역 (이벤트리스너)
     </script>
   </head>
   <body>
