--- a/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/index.html
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="./images/tvnlogo2.png" />
     <link rel="stylesheet" href="./css/main.css" />
   </head>
-  <body>
+  <body class="scbar">
     <!-- 1. 상단영역 -->
     <div id="top-area">
       <header class="top-area inbox">
@@ -174,7 +174,7 @@
                     </span>
                   </div>
                   <!-- 설명박스 -->
-                  <div class="descbx">
+                  <div class="descbx scbar">
                     <!-- 타이틀 -->
                     <h3>도깨비(김신), 939세</h3>
                     <!-- 설명글 -->
@@ -215,7 +215,7 @@
                     </span>
                   </div>
                   <!-- 설명박스 -->
-                  <div class="descbx">
+                  <div class="descbx scbar">
                     <!-- 타이틀 -->
                     <h3>지은탁, 19세</h3>
                     <!-- 설명글 -->
@@ -252,7 +252,7 @@
                     </span>
                   </div>
                   <!-- 설명박스 -->
-                  <div class="descbx">
+                  <div class="descbx scbar">
                     <!-- 타이틀 -->
                     <h3>저승사자, 30대 후반 추정</h3>
                     <!-- 설명글 -->
@@ -290,7 +290,7 @@
                     </span>
                   </div>
                   <!-- 설명박스 -->
-                  <div class="descbx">
+                  <div class="descbx scbar">
                     <!-- 타이틀 -->
                     <h3>써니, 20대 중후반</h3>
                     <!-- 설명글 -->
