--- a/003.JS학습/01.JS실험실/02.따라다니는 원.html
+++ b/003.JS학습/01.JS실험실/02.따라다니는 원.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS 실험실2 : 따라다니는 원</title>
     <!-- 외부JS -->
-    <script src="./js/following.js"></script>
+    <script src="./js/following.js" defer></script>
     <link rel="stylesheet" href="./css/following.css">
 </head>
 <body>
