--- a/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/index.html
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/index.html
@@ -160,15 +160,20 @@
       <!-- 배너는 중앙속박스 적용 안함 -->
       <section class="ban-area">
         <h2 class="temp-tit">2. 배너영역</h2>
+        <!-- 임시 버튼 -->
+        <div style="font-size: 24px; position: relative; z-index: 999;">
+          <a href="#" class="abtn ab1">이전</a>
+          <a href="#" class="abtn ab2">다음</a>
+        </div>
+        <!-- 임시블릿 -->
+        <ol style="font-size: 24px; position: relative; z-index: 99999;" class="indic">
+        </ol>
+
         <div class="cont-box">
           <div class="col-12">
             <!-- 슬라이드박스 -->
             <div class="slide-box">
-              <ul class="slider">
-                <li class="sum-01"></li>
-                <li class="sum-02"></li>
-                <li class="sum-03"></li>
-              </ul>
+              <ul class="slider"></ul>
             </div>
             <!-- 캐릭터박스 -->
             <div class="cat-box">
