--- a/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/index.html
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/index.html
@@ -161,7 +161,7 @@
       <section class="ban-area">
         <h2 class="temp-tit">2. 배너영역</h2>
         <!-- 임시 버튼 -->
-        <div style="font-size: 24px; position: relative; z-index: 999;">
+        <div class="btn-box">
           <a href="#" class="abtn ab1">이전</a>
           <a href="#" class="abtn ab2">다음</a>
         </div>
@@ -174,6 +174,11 @@
             <!-- 슬라이드박스 -->
             <div class="slide-box">
               <ul class="slider"></ul>
+              <!-- 이벤트 커버박스 -->
+              <div class="evt-cover">
+                <aside></aside>
+                <aside></aside>
+              </div>
             </div>
             <!-- 캐릭터박스 -->
             <div class="cat-box">
