마우스커서

--- a/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/index.html
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/index.html
@@ -176,8 +176,8 @@
               <ul class="slider"></ul>
               <!-- 이벤트 커버박스 -->
               <div class="evt-cover">
-                <aside></aside>
-                <aside></aside>
+                <aside class="ab1"></aside>
+                <aside class="ab2"></aside>
               </div>
             </div>
             <!-- 캐릭터박스 -->
