CGV-padding을 줘서 이어주면 됨
(영사기처럼)
아이템과 아이템 사이가 끊어져 이어줄려면
padding을 줘서 크기를 늘려 이어주면 됨

--- a/001. HTML학습/06.CGV_PJ/003.구현소스/main.html
+++ b/001. HTML학습/06.CGV_PJ/003.구현소스/main.html
@@ -9,6 +9,10 @@
 
     <link rel="stylesheet" href="./css/main.css" />
 
+    <!-- 미디어쿼리 CSS 불러오기 : 반드시 해당 css보다 아래에 위치해야함
+    기존에 있는 애를 덮어쓰기 위해-->
+    <link rel="stylesheet" href="./css/media.css">
+
     <!-- 메인 JS 불러오기 -->
     <script src="./js/main.js" defer></script>
     <!-- 자바스크립트 코드 구역 -->
