--- a/001. HTML학습/05.Nav_PJ/nav06.html
+++ b/001. HTML학습/05.Nav_PJ/nav06.html
@@ -11,7 +11,7 @@
     <!-- 메인 JS -->
     <script src="./js/nav06.js" defer></script>
     <!-- 드래그배너 JS -->
-    <script src="./js/drag_banner.js" type="module"></script>
+    <!-- <script src="./js/drag_banner.js" type="module"></script> -->
   </head>
   <body>
     <!-- 1. 상단영역 -->
