그리드 간격

--- a/002.CSS학습/03.DisplayGrid/grid1_gallery.html
+++ b/002.CSS학습/03.DisplayGrid/grid1_gallery.html
@@ -110,7 +110,16 @@
                예) grid-auto-rows: 300px;
         ******************************************************/
 
-        
+        /* [수평간격] : grid-column-gap */
+        /* grid-column-gap: 10px; */
+        /* [수직간격] : grid-row-gap */
+        /* grid-row-gap: 30px; */
+
+        /* [그리드 전체 간격] : grid-gap: 세로 가로 */
+        grid-gap: 15px 10px;
+        /* [flex gap속성도 OK] : gap :세로 가로 */
+        /* gap: 30px 10px; */
+
         }
 
 
