--- a/002.CSS학습/03.DisplayGrid/grid1_gallery.html
+++ b/002.CSS학습/03.DisplayGrid/grid1_gallery.html
@@ -246,6 +246,7 @@
 
         // 50개 이미지 넣기
         for(let i=1; i<=50; i++) {
+            // 중첩조건연산자(비?집:해?산:해변)
             grid.innerHTML+=`
             <div ${i==1?'class="first"':i==33?'class="second"':''}>
             <img src="./images/${i}.jpg" alt="dress">
