--- a/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/index.html
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/index.html
@@ -484,9 +484,9 @@
       <!-- 5. 현장포토영역 -->
       <div id="real-photo-area">
         <section class="real-photo-area inbox">
-          <h2 class="temp-tit">5. 현장포토영역</h2>
+          <h2 class="stit">현장포토</h2>
           <div class="cont-box">
-            <div class="col-12"></div>
+            <div class="col-12 live-box"></div>
           </div>
         </section>
       </div>
@@ -502,7 +502,7 @@
       <!-- 7. 최신동영상영역 -->
       <div id="clip-video-area">
         <section class="clip-video-area inbox">
-          <h2 class="temp-tit">7. 최신동영상영역</h2>
+          <h2 class="stit">최신동영상</h2>
           <div class="cont-box">
             <div class="col-12"></div>
           </div>
