--- a/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/index.html
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/index.html
@@ -493,9 +493,9 @@
       <!-- 6. 대표이미지 영역 -->
       <div id="main-photo-area">
         <section class="main-photo-area inbox">
-          <h2 class="temp-tit">6. 대표이미지 영역</h2>
+          <h2 class="stit">대표이미지</h2>
           <div class="cont-box">
-            <div class="col-12"></div>
+            <div class="col-12 poster-box"></div>
           </div>
         </section>
       </div>
