--- a/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/index.html
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/index.html
@@ -12,7 +12,10 @@
     />
 
     <link rel="shortcut icon" href="./images/tvnlogo2.png" />
+    <!-- 메인 CSS -->
     <link rel="stylesheet" href="./css/main.css" />
+    <!-- 미디어쿼리 CSS -->
+    <link rel="stylesheet" href="./css/media.css" />
     <!-- 메인JS불러오기 : 모듈로 불러오기 -->
     <script type="module" src="./js/main.js"></script>
     <!-- 
@@ -39,7 +42,7 @@
         <section class="intro-area inbox">
           <!-- <h2 class="temp-tit">3. 인트로영역</h2> -->
           <div class="cont-box">
-            <div class="col-6">
+            <div class="col-6 col-2nd-12">
               <!-- 드라마소개파트 제목 -->
               <h2 class="stit">도깨비</h2>
               <!-- 하위제목+아이콘 -->
@@ -84,7 +87,7 @@
               <button class="intro-btn">방송편성보기</button>
             </div>
             <!-- 인트로 동영상 -->
-            <div class="col-6">
+            <div class="col-6 col-2nd-12">
               <figure class="intro-mv-box">
                 <div class="intro-mv-img off">
                   <img
