--- a/003.JS학습/JS5-4.this키워드1.html
+++ b/003.JS학습/JS5-4.this키워드1.html
@@ -62,7 +62,8 @@
 
       // 엄격모드 : 선언없이 쓰는 변수를 막는 등 엄격한
       // JS문법을 적용하도록 제한한다!(프로젝트에서 선호됨!)
-    //   "use strict";
+      //   "use strict";
+      // -> 주로 오타에 의한 변수실수로 자동전역변수 선언되는 JS의 기능을 막아주는 것이 가장 중요한 이유
       // (참고) https://www.w3schools.com/js/js_strict.asp
 
       const qs = (x) => document.querySelector(x);
@@ -72,13 +73,18 @@
       const obj = {
         // 객체 속성
         name: "김종서",
+        age: 30,
         // 객체 메서드
         // 익명함수 메서드
         fn1: function () {
           // this는 객체 자신!
           console.log("1.객체안 익명메서드:", this);
           // this로 내부 속성불러오기!
-          console.log("2.객체안 익명메서드에서 객체속성읽기:", this.name);
+          console.log(
+            "2.객체안 익명메서드에서 객체속성읽기:",
+            this.name,
+            this.age + "세"
+          );
         },
         // 화살표함수 메서드
         fn2: () => {
@@ -86,7 +92,7 @@
           console.log("3.객체안 화살표함수:", this);
           // this로 내부 속성불러오기! -> 접근불가!
           console.log("4.객체안 화살표함수에서 객체속성읽기:", this.name);
-          // 이미 obj라는 객체가 전역등록되;어 객체명으로
+          // 이미 obj라는 객체가 전역등록되어 객체명으로
           // 속성에 접근할 수 있다!
           console.log("5.객체안 화살표함수에서 객체속성읽기:", obj.name);
         },
@@ -99,29 +105,39 @@
             // this는 객체 자신!
             console.log("6.객체안 객체의 익명메서드:", this);
             // this로 내부 속성불러오기!
-            console.log("7.객체안 객체의 익명메서드에서 객체속성읽기:", this.name);
+            console.log(
+              "7.객체안 객체의 익명메서드에서 객체속성읽기:",
+              this.name
+            );
           },
           // 화살표함수 메서드
           fn4: () => {
             // this는 window객체!
             console.log("8.객체안 객체의 화살표함수:", this);
             // this로 내부 속성불러오기! -> 접근불가!
-            console.log("9.객체안 객체의 화살표함수에서 객체속성읽기:", this.name);
+            console.log(
+              "9.객체안 객체의 화살표함수에서 객체속성읽기:",
+              this.name
+            );
             // 이미 obj.newOne라는 객체가 전역등록되어 객체명으로
             // 속성에 접근할 수 있다!
-            console.log("10.객체안 객체의 화살표함수에서 객체속성읽기:", obj.newOne.name);
+            console.log(
+              "10.객체안 객체의 화살표함수에서 객체속성읽기:",
+              obj.newOne.name
+            );
           },
         },
       }; //////////////// obj 객체 ///////////////
 
       // 객체 메서드 호출
-      // obj.fn1();
-      // obj.fn2();
-      // obj.newOne.fn3();
-      // obj.newOne.fn4();
+      //   obj.fn1();
+      //   obj.fn2();
+      //   obj.newOne.fn3();
+      //   obj.newOne.fn4();
+      //   화살표함수 안에서의 this는 window다
 
       // 2. 단독으로 전역객체(window)를 의미 확인!
-      // console.log("11.단독으로:", this);
+      //   console.log("11.단독으로:", this);
 
       // 3. 함수에서 전역객체(window)를 의미 확인!
       // (함수)() -> 함수자신을 바로 실행!
@@ -129,6 +145,7 @@
       (function () {
         // console.log("12.익명함수 바로실행:", this);
         // 엄격모드에서 this는 undefined임! window객체가 아님!
+        // 엄격모드는 script구역 맨 위 "use strict"; << 사용
       })();
 
       // 화살표함수
@@ -145,7 +162,25 @@
         // 만약 이를 원하지 않는 경우 mouseenter를 사용함!
         // 경계선 기준의 mouseenter/mouseleave는 이벤트버블링
         // 발생이 없다!
-        
+
+        qs('.pic').onmouseover = function(){
+            console.log('마우스오버');
+
+            //하위요소와 클릭이벤트 설정하기
+            // ㅎㅎ버튼 : 일반익명함수로 생성
+            qs('.hh').onclick = function(){
+                console.log('익명 : ',this);
+                qs('#exp').innerText=this.getAttribute('data-nm');
+                // this는 버튼 자신임
+            };///////////////클릭///////////////
+            qs('.kk').onclick = ()=>{
+                console.log('화살표 : ',this);
+                qs('#exp').innerText=this.getAttribute('data-nm');
+                // this는 바깥에 싸고 있는 이벤트 대상인 div.pic을 의미함
+                // 화살표함수는 한단계위의 이벤트 대상으로 올라가는 기능을 가지고 있음
+            };///////////////클릭///////////////
+
+        };/////////////마우스오버//////////////
       }); //////////////// load ////////////////////
     </script>
   </head>
